magazin/catalog/view/theme/journal2/css/adjust.css
#product-quantity {
	margin-bottom: 15px;
}
#product-quantity label {
	padding-right: 5px;
}
.product-info .right .cart div .button,
.product-info .right .cart div input[name="quantity"],
#fake_quantity {
	width: auto;
	float: none;
}
.product-info .right .cart div input[name="quantity"] {
	line-height: 1;
}
.vertical-centered {
	display: inline-block;
	vertical-align: middle;
}
.hide-overflow {
	overflow: scroll;
}
.mobile-horizontal-scroll {
	margin: 30px 0;
	width: 800px;
}
body.group3 .secondary-menu-item-3 span,
body.group4 .secondary-menu-item-3 span {
	font-size: 14px;
	font-weight: bold;
	color: white;
}
@media all and (min-width: 700px) {
	.hide-overflow {
		overflow: hidden;
	}
	.mobile-horizontal-scroll {
		width: auto;
	}
}
#cc-notification #cc-notification-wrapper h2 {
	margin-right: 0px !important;
}
@media all and (max-width: 720px) {
	#cc-notification #cc-notification-wrapper .cc-notification-buttons li a {
		margin-top: 22px !important;
	}
	#cc-notification #cc-notification-wrapper {
		padding: 0px !important;
	}
}
@media all and (max-width: 360px) {
	#cc-notification #cc-notification-wrapper .cc-notification-buttons li a {
		padding: 1px 3px !important;
		margin-top: 32px !important;
	}
}
.text_welcome_b2b {
	float: right;
	color: white;
	margin-left: 20px;
	margin-top: 10px;
	font-weight: bold;
}
@media all and (max-width: 1279px) {
	.text_welcome_b2b {
		visibility: hidden;
	}
}

#cc-notification {
	display: inline !important;
}

.list .bad_row td {
	background-color: rgba(255, 0, 0, 0.3);
}
.list .bad_color {
	background-color: rgb(255, 221, 0);
}
.list .bad_size {
	background-color: rgb(255, 221, 0);
}

.model_error_color {
	background-color: rgba(255, 0, 0, 0.3);
	color:white;
	padding-right:15px;
	padding-left: 15px;
}

.color_error_color {
	background-color: rgb(255, 221, 0);
	color:white;
	padding-right:15px;
	padding-left: 15px;
}

.size_error_color {
	background-color: rgb(255, 221, 0);
	color:white;
	padding-right:15px;
	padding-left: 15px;
}

#container .special_products_form td,
#container .special_products_form span {
	line-height: 300%;
	font-family: 'Century Gothic' !important;
}

.special_products_form_buttons {
	padding: 15px 30px 35px 30px;
}

.special_products_form_buttons .button {
	background-color: rgb(255, 221, 0);
	color: rgb(65, 64, 66);
}

.special_products_form_buttons .button:hover {
	background-color: rgb(65, 64, 66);
	color: rgb(255, 255, 255);
}

.form_button .button {
	background-color: rgb(255, 221, 0);
	color: rgb(65, 64, 66);
}

.form_button .button:hover {
	background-color: rgb(65, 64, 66);
	color: rgb(255, 255, 255);
}

.color_size_stock table {
	border: 1px solid #CCCCCC;
	width: auto !important;
	margin: 20px;
}

.color_size_stock th {
	background-color: rgb(244, 244, 244);
	padding: 8px 8px;
}

.color_size_stock table td {
	border: 1px solid #CCCCCC;
	width: auto;
	margin: 20px;
	text-align: center;
}

.products_complementary {
	width: 115px;
	margin: 5px 5px 20px 5px;
	display: inline-block;
}

.products_related {
	width: 115px;
	margin: 5px 5px 20px 5px;
	display: inline-block;
}

.products_complementary_name a {
	color: black;
}

.products_complementary_price {
	font-weight: bold;
}

.products_related_name a {
	color: black;
}

.products_related_price, .complementary_title, .related_title {
	font-weight: bold;
}

#form-group {
    display: none;
    z-index: 9999;
}

#form-group iframe {
	width: 100%;
	height: 100%;
}

#form-group,
#shadow-overlay {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}

#shadow-overlay {
    background: rgba(0, 0, 0, 0.8);
}

#popup {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 80vw;
    height: 80vh;
    max-width: 760px;
    max-height: 500px;
}

#popup #close {
    position: relative;
    top: -535px;
    left: 760px;
	width: 40px;
	height: 40px;
	border-style: solid;
	border-color: white;
	border-radius: 100%;
	background-color: #797E80;
}

#popup #close a {
    font-size: 19px;
    font-weight: bold;
    color: white;
    text-decoration: none;
}

/*#form-group {
	height: 300px;
	width: 500px;
	overflow: hidden;

}

#popup {
	width: 500px;
	height: 300px;
	overflow-y: scroll;
	padding-right: 20px;
}*/
#sticky-wrapper.sticky-wrapper {
	width: 100% !important;
}

